coffee-house/styles/styles.css
@import "variables.css";

html {
  scroll-behavior: smooth;
}

body {
  font-family: "Inter", sans-serif;
  background-color: var(--color-bg-body);
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}
ul,
ul li {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

img {
  width: 100%;
  height: auto;
}

.main-container {
  box-sizing: border-box;
  background-color: var(--color-bg-body);
  padding: 0 40px;
  max-width: 1440px;
  margin: 0 auto;
}

@media screen and (max-width: 480px) {
  .main-container {
    padding: 0 16px;
  }
}
/* Headings */

.heading-primary {
  color: var(--color-text-light);
  font-size: var(--font-size-heading-1);
  margin: 0;
  line-height: 105%;
  font-weight: 600;
}

.heading-secondary {
  text-align: center;
  color: var(--color-text-dark);
  font-size: var(--font-size-heading-2);
  margin: 0;
  margin-bottom: 40px;
  font-weight: 500;
  line-height: var(--height-heading-2);
}

@media screen and (max-width: 680px) {
  .heading-secondary {
    font-size: 32px;
  }
}

.heading-secondary span,
.heading-primary span {
  display: inline-flex;
  color: var(--color-text-accent);
  font-style: italic;
  font-weight: 600;
  line-height: 105%;
}

.product-title {
  font-size: 24px;
  font-style: normal;
  font-weight: 600;
  line-height: 125%;
  color: var(--color-text-dark);
  margin: 0;
}

/* Text */

.product-description {
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: 150%;
  margin: 0;
  color: var(--color-text-dark);
}

.product-price {
  font-size: 24px;
  font-style: normal;
  font-weight: 600;
  line-height: 125%;
  margin: 0;
  color: var(--color-text-dark);
}

/* Buttons */

.button-primary {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  gap: 8px;
  height: 64px;
  min-width: 200px;
  border: none;
  border-radius: 50px;
  text-decoration: none;
  background-color: var(--color-bg-body);
  cursor: pointer;
  box-shadow: none;
  transition: all 0.3s ease-in-out;
  box-sizing: border-box;
}

.button-primary span {
  font-family: "Inter", sans-serif;
  font-size: 18px;
  line-height: 150%;
  color: var(--color-text-dark);
  translate: 14px;
  font-weight: 600;
  transition: all 0.3s ease-in-out;
}

.button-primary svg {
  opacity: 0;
  transition: all 0.3s ease-in-out;
}

.button-primary:hover span {
  translate: 0;
}

.button-primary:hover svg {
  opacity: 1;
}

.menu-button {
  position: relative;
  display: flex;
  gap: 8px;
  font-size: 16px;
  line-height: 135%;
  font-weight: 600;
  height: 24px;
  color: var(--color-text-dark);
  text-decoration: none;
}
.menu-button img {
  width: 20px;
  height: 18px;
}

.link::after {
  position: absolute;
  content: "";
  height: 2px;
  background-color: var(--color-text-dark);
  bottom: 0;
  left: 0;
  transition: all 0.5s ease-in-out;
  width: 100%;
  opacity: 0;
  transform: scaleX(0);
}

.link:not(.--disabled):hover::after {
  opacity: 1;
  transform-origin: 50% 0;
  transform: scaleX(1);
}

.link.--disabled {
  pointer-events: none;
  cursor: auto;
}

.link.--disabled::after {
  opacity: 1;
}

.app-button {
  display: inline-flex;
  align-items: center;
  padding: 12px 20px;
  gap: 8px;
  height: 64px;
  min-width: 200px;
  border: 1px solid var(--color-border-dark);
  border-radius: 100px;
  text-decoration: none;
  background-color: transparent;
  cursor: pointer;
  box-shadow: none;
  transition: all 0.5s ease-in-out;
  box-sizing: border-box;
}

.app-button p {
  display: flex;
  flex-direction: column;
  text-decoration: none;
  color: var(--color-text-dark);
  transition: all 0.5s ease-in-out;
}

.app-button p span:nth-child(1) {
  font-size: 10px;
  font-style: normal;
  font-weight: 600;
  line-height: 140%;
}

.app-button p span:nth-child(2) {
  font-size: 16px;
  font-style: normal;
  font-weight: 600;
  line-height: 150%;
}

.app-button path {
  transition: all 0.5s ease-in-out;
}

.app-button:hover {
  background-color: var(--color-border-dark);
}

.app-button:hover p {
  color: var(--color-bg-body);
}

.app-button:hover path {
  fill: var(--color-bg-body);
}
/* Header */

.main-header {
  display: flex;
  padding: 19px 0;
}

.main-header .container {
  position: relative;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.main-header .logo {
  margin-right: 20px;
}

.main-header .logo img {
  width: 100px;
  height: auto;
}

.nav-container {
  display: flex;
  max-width: 895px;
  justify-content: space-between;
  flex-grow: 1;
}

.main-nav .list {
  display: flex;
  gap: 42px;
  margin-bottom: 4px;
}

.main-nav .item a {
  position: relative;
  display: flex;
  height: 24px;
  font-size: 16px;
  font-weight: 600;
  line-height: 130%;
  text-decoration: none;
  color: var(--color-text-dark);
}
.nav-toggle-block .nav-toggle-button {
  display: none;
}

@media screen and (max-width: 768px) {
  .nav-container {
    position: absolute;
    top: calc(100% + 4px);
    background: var(--color-bg-body);
    left: 0;
    right: 0;
    flex-direction: column;
    height: calc(100vh - 78px - 4px);
  }
  .main-header .nav-container:not(.-active) {
    display: none;
  }

  .nav-toggle-block .nav-toggle-button {
    margin-right: -5px;
    display: block;
    background: transparent;
    border: 0;
  }
}

/* Enjoy section */

.enjoy {
  width: 100%;
  border-radius: 40px;
  padding: 100px 100px;
  background-image: url("../assets/img/img-hero.jpg");
  background-position: center;
  margin-top: -2px;
  margin-bottom: 100px;
}

.enjoy .container {
  max-width: 530px;
}

.enjoy .description {
  font-size: var(--font-size-text-1);
  color: var(--color-text-light);
  margin: 40px 0;
  font-weight: 400;
  line-height: 150%;
}

@media screen and (max-width: 820px) {
  .enjoy {
    padding: 100px 60px;
  }
}

@media screen and (max-width: 735px) {
  .enjoy .heading-primary {
    font-size: 62px;
  }
  .enjoy {
    padding: 80px 60px;
  }
}
/* ... */

